feat: Enhance UI with macOS blur background and window control buttons; add localization for new actions

--- a/Sentinel/Localization/en.json
+++ b/Sentinel/Localization/en.json
@@ -47,6 +47,8 @@
     "sentinel": "Sentinel",
     "done": "Done",
     "interval": "Interval",
-    "create": "Create"
+    "create": "Create",
+    "open": "Open",
+    "quit": "Quit"
   }
 }
