--- a/Sentinel/Localization/es.json
+++ b/Sentinel/Localization/es.json
@@ -47,6 +47,8 @@
     "sentinel": "Sentinel",
     "done": "Listo",
     "interval": "Intervalo",
-    "create": "Crear"
+    "create": "Crear",
+    "open": "Abrir",
+    "quit": "Salir"
   }
 }
