feat: Revamp UI for reminders with enhanced layout, localization updates, and improved interval slider functionality

--- a/Sentinel/Localization/en.json
+++ b/Sentinel/Localization/en.json
@@ -31,9 +31,12 @@
   },
   "ui": {
     "settings": "Settings",
+    "sentinel_description": "Protect your focus with gentle reminders.",
     "add_reminder": "Add Reminder",
+    "add": "Add",
     "delete": "Delete",
     "close": "Close",
+    "cancel": "Cancel",
     "update": "Update",
     "language": "Language",
     "launch_at_login": "Launch at Login",
