--- a/Sentinel/Localization/fr.json
+++ b/Sentinel/Localization/fr.json
@@ -59,6 +59,13 @@
     "hide_sidebar": "Masquer la barre latérale",
     "show_sidebar": "Afficher la barre latérale",
     "open": "Ouvrir",
-    "quit": "Quitter"
+    "quit": "Quitter",
+    "info_how_it_works_title": "Comment ça marche",
+    "info_how_it_works_desc": "Sentinel reste discrètement dans votre barre de menus. Ajoutez des rappels personnalisés pour vous étirer, boire de l'eau ou reposer vos yeux. Le moment venu, vous recevrez une douce notification.",
+    "info_why_matters_title": "Pourquoi c'est important",
+    "info_why_matters_desc": "Faire de courtes pauses régulières réduit la tension physique, prévient la fatigue oculaire et améliore considérablement la concentration et les performances cognitives à long terme.",
+    "info_tips_title": "Conseils Pro",
+    "info_tips_desc": "• Gardez des intervalles courts (ex: 20m pour les yeux, 45m pour s'étirer).\n• Mettez Sentinel en sourdine globalement à l'aide de l'interrupteur lorsque vous avez besoin d'une concentration profonde et ininterrompue.",
+    "version": "Version"
   }
 }
